--- a/css/style.scss
+++ b/css/style.scss
@@ -161,42 +161,25 @@ html{
             margin-bottom:60px;
             .container{
                 .row{
-                    .col-md-9{
-                        .variables__left{
-                            padding-top:60px;
+                    .col{
+                        .variables__list{
+                            display:flex;
+                            list-style:none;
                             justify-content: space-between;
-                            padding-bottom:23px;
-                            .variables__list{
+                            .variables__item{
                                 list-style:none;
-                                .variables__item{
-                                    padding-bottom:37px;
-                                    font-weight: 500;
-                                    font-size: 16px;
-                                    line-height: 19px;
-                                    color: #A5A5A5;
-                                    cursor: pointer;
-                                    &:hover{
-                                        color: #333333;
-                                    }
+                                .variables__text{
+                                    margin-top:37px;
+                                }
+                                &:last-child{
+                                    max-width:234px;
                                 }
                             }
-                        }
-                    }
-                    .col-md-3{
-                        .variables__list{
-                            padding-top:60px;
-                            list-style:none;
-                            .variables__item{
-                                padding-bottom:37px;
-                                font-weight: 500;
-                                font-size: 16px;
-                                line-height: 19px;
-                                color: #A5A5A5;
-                                &:first-child{
-                                    padding-bottom:20px;
-                                }
-                                &:hover{
-                                    color:black;
+                            .variables__item-5{
+                                .variables__text{
+                                    &:last-child{
+                                        margin-top:15px;
+                                    }
                                 }
                             }
                         }
