--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,19 @@ html body .variables .container .row .col .variables__list .variables__item {
 }
 
 html body .variables .container .row .col .variables__list .variables__item .variables__text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #A5A5A5;
   margin-top: 37px;
+}
+
+html body .variables .container .row .col .variables__list .variables__item .variables__text:first-child {
+  margin-top: 59px;
+}
+
+html body .variables .container .row .col .variables__list .variables__item .variables__text:last-child {
+  margin-bottom: 59px;
 }
 
 html body .variables .container .row .col .variables__list .variables__item:last-child {
@@ -203,7 +215,7 @@ html body .variables .container .row .col .variables__list .variables__item:last
 }
 
 html body .variables .container .row .col .variables__list .variables__item-5 .variables__text:last-child {
-  margin-top: 15px;
+  margin-top: 18px;
 }
 
 html body .skills {
