--- a/css/style.scss
+++ b/css/style.scss
@@ -157,6 +157,7 @@ html{
             }
         }
         .variables{
+            // overflow: hidden;
             background:white;
             margin-bottom:60px;
             .container{
@@ -169,6 +170,7 @@ html{
                             .variables__item{
                                 list-style:none;
                                 .variables__text{
+                                    cursor: pointer;
                                     font-weight: 500;
                                     font-size: 16px;
                                     line-height: 19px;
@@ -179,6 +181,9 @@ html{
                                     }
                                     &:last-child{
                                         margin-bottom:59px;
+                                    }
+                                    &:hover{
+                                        color:#333333;
                                     }
                                 }
                                 &:last-child{
@@ -200,7 +205,20 @@ html{
         .skills{
             margin-bottom:60px;
             .container{
-                .row{
+                .skills__row-1{
+                    margin-bottom:60px;
+                    .skills__outset{
+                        text-align:right;
+                        margin-top:10px;
+                        .skills__link{
+                            font-weight: 500;
+                            font-size: 16px;
+                            line-height: 19px;
+                            color: #A5A5A5;
+                        }
+                    }
+                }
+                .skills__row-2{
                     .col-md-6{
                         .skills__title{
                             font-size: 36px;
@@ -335,13 +353,12 @@ html{
                         .teaching__item{
                             .teaching__pic{
                                 background: #ECF1F7;
-                                width:200px;
+                                width:100%;
                                 height:195px;
                             }
                             .teaching__info{
-                                padding:37px 0px 0px 24px;
+                                padding:37px 147px 18px 24px;
                                 background:white;
-                                padding-right:137px;
                                 .teaching__name{
                                     font-weight: 500;
                                     font-size: 18px;
