--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ html body .header .container .row {
 
 html body .header .container .row .header__left-side .header__logo {
   padding-bottom: 10px;
+  max-width: 100%;
 }
 
 html body .header .container .row .header__left-side .header__catalog {
@@ -171,7 +172,7 @@ html body .rise .container .row .col-md-8 .rise__title {
   line-height: 50px;
 }
 
-html body .rise .container .row .col-md-4 .rise__wrapper .rice__pic {
+html body .rise .container .row .col-md-4 .rice__pic {
   width: 100%;
 }
 
@@ -381,12 +382,12 @@ html body .teaching .container .row .col-md-7 .teaching__title {
 
 html body .teaching .container .row .col-md-6 .teaching__item .teaching__pic {
   background: #ECF1F7;
-  width: 100%;
-  height: 195px;
+  max-width: 100%;
+  height: 100%;
 }
 
 html body .teaching .container .row .col-md-6 .teaching__item .teaching__info {
-  padding: 37px 147px 18px 24px;
+  padding: 37px 20% 18px 24px;
   background: white;
 }
 
@@ -394,13 +395,16 @@ html body .teaching .container .row .col-md-6 .teaching__item .teaching__info .t
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
+  margin-bottom: 25px;
 }
 
 html body .teaching .container .row .col-md-6 .teaching__item .teaching__info .teaching__text {
+  min-width: 200px;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   color: #A5A5A5;
+  margin-bottom: 34px;
 }
 
 html body .teaching .container .row .col-md-6 .teaching__item .teaching__info .teaching__more {
@@ -466,6 +470,10 @@ html body .systemic .container .systemic__row-2 .col .owl-carousel .item .system
   max-height: 340px;
 }
 
+html body .systemic .container .systemic__row-2 .col .owl-carousel .item .systemic__wrapper .systemic__pic .systemic__img {
+  width: 100%;
+}
+
 html body .systemic .container .systemic__row-2 .col .owl-carousel .item .systemic__wrapper .systemic__info {
   max-height: 115px;
   padding: 48px 0px 54px 30px;
@@ -486,6 +494,10 @@ html body .trust .container .row .col {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+html body .trust .container .row .col .trust__img {
+  max-width: 100%;
 }
 
 html body .trust .container .trust__row-1 {
