--- a/css/style.scss
+++ b/css/style.scss
@@ -46,6 +46,7 @@ html{
                     .header__left-side{
                         .header__logo{
                             padding-bottom:10px;
+                            max-width:100%;
                         }
                         .header__catalog{
                             font-family: 'Lato', sans-serif;
@@ -147,10 +148,8 @@ html{
                         }
                     }
                     .col-md-4{
-                        .rise__wrapper{
-                            .rice__pic{
-                                width:100%;
-                            }
+                        .rice__pic{
+                            width:100%;
                         }
                     }
                 }
@@ -353,22 +352,25 @@ html{
                         .teaching__item{
                             .teaching__pic{
                                 background: #ECF1F7;
-                                width:100%;
-                                height:195px;
+                                max-width:100%;
+                                height:100%;
                             }
                             .teaching__info{
-                                padding:37px 147px 18px 24px;
+                                padding:37px 20% 18px 24px;
                                 background:white;
                                 .teaching__name{
                                     font-weight: 500;
                                     font-size: 18px;
                                     line-height: 22px;
+                                    margin-bottom:25px;
                                 }
                                 .teaching__text{
+                                    min-width:200px;
                                     font-weight: 500;
                                     font-size: 16px;
                                     line-height: 19px;
                                     color: #A5A5A5;
+                                    margin-bottom:34px;
                                 }
                                 .teaching__more{
                                     font-size: 16px;
@@ -432,6 +434,9 @@ html{
                                         background: #D2D2D2;
                                         border-radius:5px 5px 0px 0px;
                                         max-height:340px;
+                                        .systemic__img{
+                                            width:100%;
+                                        }
                                     }
                                     .systemic__info{
                                         max-height:115px;
@@ -456,6 +461,9 @@ html{
                 .row{
                     .col{
                         justify-content: space-between;
+                        .trust__img{
+                            max-width:100%;
+                        }
                     }
                 }
                 .trust__row-1{
