--- a/css/style.scss
+++ b/css/style.scss
@@ -522,7 +522,7 @@ html{
             }
         }
         .help{
-            background:#F2F4F3;
+            background:#f2f4f2;
             position: relative;
             .container{
                 .row{
@@ -605,6 +605,12 @@ html{
                             position:absolute;
                             right:0;
                             top:0;
+                            @media screen and (max-width:1300px) {
+                                background-size:50% 100%;
+                            }
+                            @media screen and (max-width:1200px){
+                                display:none;
+                            }
                         }
                     }
                 }
