--- a/css/style.scss
+++ b/css/style.scss
@@ -44,6 +44,11 @@ html{
                 .row{
                     position:relative;
                     .header__left-side{
+                        display:flex;
+                        justify-content:space-between;
+                        @media screen and (max-width:1000px) {
+                           
+                        }
                         .header__logo{
                             padding-bottom:10px;
                             max-width:100%;
@@ -51,13 +56,15 @@ html{
                         .header__catalog{
                             font-family: 'Lato', sans-serif;
                             border: 1px solid #A5A5A5;
-                            margin-left:54px;
                             border-radius: 5px;
                             background: #E5E5E5;
                             padding:12px 27px 14px 20px;
                             font-size: 16px;
                             line-height: 19px;
                             color: #A5A5A5;
+                            @media screen and (max-width:960px) {
+                                display:none;
+                            }
                             .header__text{
                                 padding-right:6px;
                             }
@@ -70,6 +77,9 @@ html{
                             display:flex;
                             list-style:none;
                             margin-top:10px;
+                            @media screen and (max-width:960px) {
+                                display:none;
+                            }
                             .header__item{
                                 margin-right:33px;
                                 text-align:center;
@@ -94,6 +104,10 @@ html{
                                     color: #79818C;
                                     &:hover{
                                         color: #333333;
+                                    }
+                                    @media screen and (max-width:1000px) {
+                                        font-size:14px;
+                                        line-height:17px;   
                                     }
                                 }
                             }
@@ -123,7 +137,7 @@ html{
                             font-family: 'Lato', sans-serif;
                             background: #E30613;
                             border-radius: 5px;
-                            padding:12px 20px 14px 20px;
+                            padding:12px 20px 12px 20px;
                             border:0px;
                             display:inline;
                             .header__link{
