--- a/css/style.css
+++ b/css/style.css
@@ -199,8 +199,8 @@ html body .rise .container .row .col-md-8 .rise__title {
   line-height: 50px;
 }
 
-html body .rise .container .row .col-md-4 .rice__pic {
-  width: 100%;
+html body .rise .container .row .col-md-4 .rise__pic {
+  max-width: 100%;
 }
 
 html body .variables {
@@ -271,18 +271,17 @@ html body .skills .container .skills__row-1 .skills__outset .skills__link {
   color: #A5A5A5;
 }
 
-html body .skills .container .skills__row-2 .col-md-6 .skills__title {
+html body .skills .container .skills__row-1 .skills__title {
   font-size: 36px;
   line-height: 44px;
   color: #333333;
-  margin-bottom: 52px;
 }
 
 html body .skills .container .skills__row-2 .col-md-6 .skills__offer {
   -webkit-box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
   background-color: white;
-  padding: 33px 33px 33px 44px;
+  padding: 33px 33px 38px 33px;
 }
 
 html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__head {
@@ -307,14 +306,14 @@ html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__he
 html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__head .skills__pic {
   position: relative;
   background: #E30613;
-  height: 65px;
-  width: 67px;
   border-radius: 5px;
+  text-align: center;
+  padding: 12px 11px 0px 11px;
 }
 
 html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__head .skills__pic .skills__icon {
-  margin-left: 20px;
-  margin-top: 15px;
+  height: 21px;
+  width: 21px;
 }
 
 html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__head .skills__pic .skills__number {
@@ -322,7 +321,6 @@ html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__he
   font-size: 12px;
   line-height: 15px;
   color: white;
-  margin-left: 11px;
 }
 
 html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__text {
@@ -335,19 +333,6 @@ html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__te
 
 html body .skills .container .skills__row-2 .col-md-6 .skills__offer .skills__record {
   text-decoration: none;
-}
-
-html body .skills .container .skills__row-2 .col-md-6 .skills__outset {
-  margin-top: 18px;
-  margin-bottom: 55px;
-  text-align: right;
-}
-
-html body .skills .container .skills__row-2 .col-md-6 .skills__outset .skills__link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 19px;
-  color: #CDCDCD;
 }
 
 html body .retraining .container .row {
