--- a/css/style.scss
+++ b/css/style.scss
@@ -162,8 +162,8 @@ html{
                         }
                     }
                     .col-md-4{
-                        .rice__pic{
-                            width:100%;
+                        .rise__pic{
+                            max-width:100%;
                         }
                     }
                 }
@@ -230,19 +230,18 @@ html{
                             color: #A5A5A5;
                         }
                     }
+                    .skills__title{
+                        font-size: 36px;
+                        line-height: 44px;
+                        color: #333333;
+                    }
                 }
                 .skills__row-2{
                     .col-md-6{
-                        .skills__title{
-                            font-size: 36px;
-                            line-height: 44px;
-                            color: #333333;
-                            margin-bottom:52px;
-                        }
                         .skills__offer{
                             box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
                             background-color:white;
-                            padding:33px 33px 33px 44px;
+                            padding:33px 33px 38px 33px;
                             .skills__head{
                                 display:flex;
                                 justify-content: space-between;
@@ -257,19 +256,18 @@ html{
                                 .skills__pic{
                                     position:relative;
                                     background: #E30613;
-                                    height:65px;
-                                    width:67px;
                                     border-radius: 5px;
+                                    text-align: center;
+                                    padding:12px 11px 0px 11px;
                                     .skills__icon{
-                                        margin-left:20px;
-                                        margin-top:15px;
+                                        height:21px;
+                                        width:21px;
                                     }
                                     .skills__number{
                                         font-weight: 500;
                                         font-size: 12px;
                                         line-height: 15px;
                                         color:white;
-                                        margin-left:11px;
                                     }
                                 }
                             }
@@ -282,19 +280,6 @@ html{
                             }
                             .skills__record{
                                 text-decoration:none;
-                            }
-                        }
-                    }
-                    .col-md-6{
-                        .skills__outset{
-                            margin-top:18px;
-                            margin-bottom:55px;
-                            text-align:right;
-                            .skills__link{
-                                font-weight: 500;
-                                font-size: 16px;
-                                line-height: 19px;
-                                color:#CDCDCD;
                             }
                         }
                     }
